--- a/index.html
+++ b/index.html
@@ -373,6 +373,89 @@
     }
     .service-item:hover .explore-hint { color: rgba(200,169,106,0.6); }
 
+    /* Glow pulse ring */
+    .service-item::after {
+      content: '';
+      position: absolute;
+      inset: -6px;
+      border-radius: 8px;
+      background: radial-gradient(ellipse, rgba(200,169,106,0.18), transparent 70%);
+      opacity: 0.4;
+      animation: glowPulse 3s ease-in-out infinite;
+      pointer-events: none;
+      z-index: -1;
+    }
+    .service-item:nth-child(1)::after { animation-delay: 0s; }
+    .service-item:nth-child(2)::after { animation-delay: 1s; }
+    .service-item:nth-child(3)::after { animation-delay: 2s; }
+    .service-item:hover::after { animation-play-state: paused; opacity: 0.9; }
+    @keyframes glowPulse {
+      0%, 100% { opacity: 0.4; }
+      50% { opacity: 0.8; }
+    }
+
+    /* Icon micro-bounce (one-shot after entrance) */
+    .service-item .icon {
+      animation: iconNudge 0.5s ease-out both;
+      animation-delay: 3.2s;
+    }
+    .service-item:nth-child(2) .icon { animation-delay: 3.4s; }
+    .service-item:nth-child(3) .icon { animation-delay: 3.6s; }
+    @keyframes iconNudge {
+      0% { transform: translateY(0); }
+      40% { transform: translateY(-3px); }
+      70% { transform: translateY(1px); }
+      100% { transform: translateY(0); }
+    }
+
+    /* Explore hint shimmer sweep */
+    .explore-hint {
+      position: relative;
+      overflow: hidden;
+    }
+    .explore-hint::before {
+      content: '';
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(200,169,106,0.4), transparent);
+      transform: translateX(-100%);
+      animation: shimmerSweep 0.8s ease-in-out both;
+      animation-delay: 3.8s;
+      pointer-events: none;
+    }
+    .service-item:nth-child(2) .explore-hint::before { animation-delay: 4.0s; }
+    .service-item:nth-child(3) .explore-hint::before { animation-delay: 4.2s; }
+    @keyframes shimmerSweep {
+      0% { transform: translateX(-100%); }
+      100% { transform: translateX(100%); }
+    }
+
+    /* Hover icon rotation */
+    .service-item[data-panel="guided"]:hover .icon svg {
+      transform: translateY(0.2px) rotate(15deg);
+    }
+    .service-item[data-panel="booking"]:hover .icon svg {
+      transform: translateY(-0.4px) rotate(-5deg);
+    }
+    .service-item[data-panel="lessons"]:hover .icon svg {
+      transform: translateY(-0.8px) rotate(5deg);
+    }
+
+    /* Re-nudge animation class (applied via JS on idle) */
+    .service-item.nudge-repeat .icon {
+      animation: iconNudge 0.5s ease-out both;
+      animation-delay: 0s;
+    }
+    .service-item.nudge-repeat:nth-child(2) .icon { animation-delay: 0.2s; }
+    .service-item.nudge-repeat:nth-child(3) .icon { animation-delay: 0.4s; }
+    .service-item.nudge-repeat .explore-hint::before {
+      animation: shimmerSweep 0.8s ease-in-out both;
+      animation-delay: 0.6s;
+    }
+    .service-item.nudge-repeat:nth-child(2) .explore-hint::before { animation-delay: 0.8s; }
+    .service-item.nudge-repeat:nth-child(3) .explore-hint::before { animation-delay: 1.0s; }
+
     /* CTA */
     .cta-row {
       display: flex; gap: 1.1rem; margin-top: var(--space-sm);
@@ -600,6 +683,11 @@
       .page-track { transition: none; }
       .page-arrow { transition: none; }
       .page-dot { transition: none; }
+      .service-item::after { animation: none; opacity: 0; }
+      .service-item .icon { animation: none; }
+      .explore-hint::before { animation: none; display: none; }
+      .service-item.nudge-repeat .icon { animation: none; }
+      .service-item.nudge-repeat .explore-hint::before { animation: none; display: none; }
     }
   </style>
 </head>
@@ -1196,6 +1284,44 @@
           else goToPage(currentPage - 1);
         }
       }, { passive: true });
+    })();
+
+    /* Idle re-nudge: replay icon bounce + shimmer once if no tour selected after 12s */
+    (function() {
+      var nudgeTimer = null;
+      var nudgeFired = false;
+
+      function scheduleNudge() {
+        if (nudgeFired) return;
+        nudgeTimer = setTimeout(function() {
+          if (document.hidden || activeSlideId !== 'content-default') return;
+          nudgeFired = true;
+          serviceItems.forEach(function(item) {
+            item.classList.add('nudge-repeat');
+          });
+          // Clean up class after animations finish
+          setTimeout(function() {
+            serviceItems.forEach(function(item) {
+              item.classList.remove('nudge-repeat');
+            });
+          }, 1800);
+        }, 12000);
+      }
+
+      // Start timer after landing is revealed, not on page load
+      var origReveal = revealLanding;
+      revealLanding = function() {
+        origReveal();
+        scheduleNudge();
+      };
+
+      // Cancel if user interacts with a service item
+      serviceItems.forEach(function(item) {
+        item.addEventListener('click', function() {
+          clearTimeout(nudgeTimer);
+          nudgeFired = true;
+        });
+      });
     })();
   </script>
 
