--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     .landing-bg {
       position: absolute; inset: 0; width: 100%; height: 100%;
-      object-fit: cover; filter: brightness(0.22);
+      object-fit: cover; filter: brightness(0.32);
       transition: filter 0.6s ease;
     }
 
@@ -74,7 +74,7 @@
       inset: 0;
       z-index: 1;
       pointer-events: none;
-      background: linear-gradient(180deg, rgba(6,10,14,0.52) 0%, rgba(6,10,14,0.62) 100%);
+      background: linear-gradient(180deg, rgba(6,10,14,0.38) 0%, rgba(6,10,14,0.48) 100%);
     }
 
     /* Aurora */
@@ -522,9 +522,9 @@
       position: relative; overflow: hidden;
     }
 
-    /* Gallery pages (hidden for now) */
+    /* Gallery pages */
     .gallery-page {
-      display: none; /* was: flex */ align-items: center; justify-content: center;
+      display: flex; align-items: center; justify-content: center;
       background: #000;
     }
     .gallery-bg {
@@ -554,9 +554,152 @@
       width: 50px; height: 2px; background: var(--warm-rope); border: none;
     }
 
-    /* Page arrows (hidden for now) */
+    /* Photo tile page header */
+    .tile-header {
+      position: absolute;
+      top: 2.2rem;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 2;
+      text-align: center;
+      white-space: nowrap;
+    }
+    .tile-title {
+      font-family: 'Teko', sans-serif;
+      font-size: clamp(1.4rem, 3vw, 2rem);
+      font-weight: 500;
+      color: rgba(242,245,244,0.7);
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+    }
+    .tile-subtitle {
+      font-size: 0.88rem;
+      color: var(--warm-rope);
+      letter-spacing: 0.04em;
+      margin-top: 0.2rem;
+      opacity: 0.7;
+    }
+
+    /* Social links row */
+    .tile-social-row {
+      position: absolute;
+      bottom: 3.5rem;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 2;
+      display: flex;
+      gap: 0.6rem;
+      white-space: nowrap;
+    }
+    .tile-social-link {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.5rem 1.2rem;
+      border-radius: 999px;
+      border: 1px solid rgba(242,245,244,0.15);
+      background: rgba(10,16,21,0.5);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      color: rgba(242,245,244,0.6);
+      text-decoration: none;
+      font-size: 0.75rem;
+      letter-spacing: 0.03em;
+      transition: all 0.3s ease;
+    }
+    .tile-social-link:hover {
+      color: #fff;
+      border-color: rgba(242,245,244,0.35);
+      transform: translateY(-2px);
+    }
+    .tile-social-link:first-child:hover {
+      background: rgba(24,119,242,0.25);
+    }
+    .tile-social-link:last-child:hover {
+      background: rgba(37,211,102,0.2);
+    }
+    .tile-social-link svg {
+      flex-shrink: 0;
+    }
+
+    /* Photo tile grid */
+    .tile-grid {
+      position: relative; z-index: 2;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 6px;
+      padding: 2rem;
+      width: 100%;
+      max-width: min(90vh, 90vw);
+      margin: auto;
+    }
+    .tile-grid .tile {
+      position: relative;
+      width: 100%;
+      padding-bottom: 100%; /* 1:1 ratio */
+      overflow: hidden;
+      border-radius: 4px;
+    }
+    .tile-grid .tile img {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    /* "See More" tile overlay */
+    .tile-more {
+      display: block;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    .tile-more-overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(6,10,14,0.55);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 0.2rem;
+      transition: background 0.3s ease;
+    }
+    .tile-more:hover .tile-more-overlay {
+      background: rgba(6,10,14,0.35);
+    }
+    .tile-more-icon {
+      font-family: 'Teko', sans-serif;
+      font-size: 2rem;
+      font-weight: 400;
+      color: rgba(242,245,244,0.8);
+      line-height: 1;
+    }
+    .tile-more-label {
+      font-size: 0.72rem;
+      color: rgba(242,245,244,0.6);
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+    }
+    .tile-more:hover .tile-more-icon { color: #fff; }
+    .tile-more:hover .tile-more-label { color: var(--warm-rope); }
+    @media (max-width: 600px) {
+      .tile-grid {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 4px;
+        padding: 1rem;
+        max-width: 95vw;
+      }
+    }
+    @media (max-width: 380px) {
+      .tile-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 3px;
+        padding: 0.75rem;
+      }
+    }
+
+    /* Page arrows */
     .page-arrow {
-      display: none; /* hidden for now */
       position: fixed; top: 50%; z-index: 10;
       transform: translateY(-50%);
       width: 44px; height: 44px; border-radius: 50%;
@@ -575,9 +718,9 @@
     .page-arrow-right { right: 1.25rem; }
     .page-arrow.hidden { opacity: 0; pointer-events: none; }
 
-    /* Page dots (hidden for now) */
+    /* Page dots */
     .page-dots {
-      display: none; /* hidden for now */
+      display: flex;
       position: fixed; bottom: 1.2rem; left: 50%; transform: translateX(-50%);
       z-index: 10; gap: 0.5rem;
     }
@@ -820,36 +963,36 @@
     </div>
   </main>
 
-  <!-- GALLERY PAGE 1: The Waters -->
+  <!-- PHOTO GALLERY PAGE -->
   <section class="page gallery-page" data-page="1">
-    <img src="Deep Fjord and Mist.png" alt="Norwegian fjord scenery" class="gallery-bg" loading="lazy" decoding="async">
-    <div class="readability-overlay" aria-hidden="true"></div>
-    <div class="gallery-content">
-      <h2 class="gallery-title">The Waters</h2>
-      <hr class="gallery-divider">
-      <p class="gallery-desc">Remote lakes and fjords across Northern Norway and northern Sweden. Untouched waters where predator fish thrive in silence, waiting for the right angler.</p>
+    <div style="position:absolute;inset:0;background:#0a1015;"></div>
+    <div class="tile-header">
+      <h2 class="tile-title">From the Water</h2>
+      <p class="tile-subtitle">Every trip tells a story — here's a glimpse of ours</p>
     </div>
-  </section>
-
-  <!-- GALLERY PAGE 2: The Catch -->
-  <section class="page gallery-page" data-page="2">
-    <img src="image1.png" alt="Pike fishing action" class="gallery-bg" loading="lazy" decoding="async">
-    <div class="readability-overlay" aria-hidden="true"></div>
-    <div class="gallery-content">
-      <h2 class="gallery-title">The Catch</h2>
-      <hr class="gallery-divider">
-      <p class="gallery-desc">Pike and perch in waters that few have ever fished. Every cast is a chance at something extraordinary — trophy fish in pristine wilderness.</p>
+    <div class="tile-social-row">
+      <a href="https://www.facebook.com/profile.php?id=61583286603820" target="_blank" rel="noopener noreferrer" class="tile-social-link" aria-label="Follow us on Facebook">
+        <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+        <span>Follow us on Facebook</span>
+      </a>
+      <a href="https://wa.me/46768979472" target="_blank" rel="noopener noreferrer" class="tile-social-link" aria-label="Message us on WhatsApp">
+        <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
+        <span>Message us on WhatsApp</span>
+      </a>
     </div>
-  </section>
-
-  <!-- GALLERY PAGE 3: The Team -->
-  <section class="page gallery-page" data-page="3">
-    <img src="image1.png" alt="Asgeir and Ola on the water" class="gallery-bg" loading="lazy" decoding="async" style="filter: brightness(0.22) saturate(0.8);">
-    <div class="readability-overlay" aria-hidden="true"></div>
-    <div class="gallery-content">
-      <h2 class="gallery-title">The Team</h2>
-      <hr class="gallery-divider">
-      <p class="gallery-desc">Meet Asgeir and Ola — local guides with deep knowledge of these northern waters. They know where the big fish are, and they'll take you there.</p>
+    <div class="tile-grid">
+      <div class="tile"><img src="./1.jpg" alt="" loading="lazy" decoding="async"></div>
+      <div class="tile"><img src="./2.jpg" alt="" loading="lazy" decoding="async"></div>
+      <div class="tile"><img src="./3.jpg" alt="" loading="lazy" decoding="async"></div>
+      <div class="tile"><img src="./4.jpg" alt="" loading="lazy" decoding="async"></div>
+      <div class="tile"><img src="./5.jpg" alt="" loading="lazy" decoding="async"></div>
+      <a href="https://www.facebook.com/profile.php?id=61583286603820" target="_blank" rel="noopener noreferrer" class="tile tile-more">
+        <img src="./6.jpg" alt="" loading="lazy" decoding="async">
+        <div class="tile-more-overlay">
+          <span class="tile-more-icon">+</span>
+          <span class="tile-more-label">See More</span>
+        </div>
+      </a>
     </div>
   </section>
 
@@ -867,8 +1010,6 @@
   <div class="page-dots">
     <button class="page-dot active" data-page="0" aria-label="Page 1"></button>
     <button class="page-dot" data-page="1" aria-label="Page 2"></button>
-    <button class="page-dot" data-page="2" aria-label="Page 3"></button>
-    <button class="page-dot" data-page="3" aria-label="Page 4"></button>
   </div>
 
   </div><!-- .page-slider -->
