--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
       color: var(--warm-rope);
       letter-spacing: 0.04em;
       margin-top: 0.2rem;
-      opacity: 0.7;
+      font-weight: 600;
     }
 
     /* Social links row */
@@ -873,7 +873,7 @@
             <path id="main-title-arc" d="M 18 245 Q 420 30 822 245"></path>
           </defs>
           <text class="arched-title-text">
-            <textPath href="#main-title-arc" startOffset="50%" text-anchor="middle">LakesidePredatorfishing</textPath>
+            <textPath href="#main-title-arc" startOffset="50%" text-anchor="middle">Lakeside Predatorfishing</textPath>
           </text>
         </svg>
       </h1>
@@ -967,17 +967,17 @@
   <section class="page gallery-page" data-page="1">
     <div style="position:absolute;inset:0;background:#0a1015;"></div>
     <div class="tile-header">
-      <h2 class="tile-title">From the Water</h2>
-      <p class="tile-subtitle">Every trip tells a story — here's a glimpse of ours</p>
+      <h2 class="tile-title" id="tile-title">From the Water</h2>
+      <p class="tile-subtitle" id="tile-subtitle">Every trip tells a story — here's a glimpse of ours</p>
     </div>
     <div class="tile-social-row">
       <a href="https://www.facebook.com/profile.php?id=61583286603820" target="_blank" rel="noopener noreferrer" class="tile-social-link" aria-label="Follow us on Facebook">
         <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
-        <span>Follow us on Facebook</span>
+        <span id="tile-fb-text">Follow us on Facebook</span>
       </a>
       <a href="https://wa.me/46768979472" target="_blank" rel="noopener noreferrer" class="tile-social-link" aria-label="Message us on WhatsApp">
         <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
-        <span>Message us on WhatsApp</span>
+        <span id="tile-wa-text">Message us on WhatsApp</span>
       </a>
     </div>
     <div class="tile-grid">
@@ -990,7 +990,7 @@
         <img src="./6.jpg" alt="" loading="lazy" decoding="async">
         <div class="tile-more-overlay">
           <span class="tile-more-icon">+</span>
-          <span class="tile-more-label">See More</span>
+          <span class="tile-more-label" id="tile-see-more">See More</span>
         </div>
       </a>
     </div>
@@ -1143,7 +1143,14 @@
           { title: 'The Waters', desc: 'Remote lakes and fjords across Northern Norway and northern Sweden. Untouched waters where predator fish thrive in silence, waiting for the right angler.' },
           { title: 'The Catch', desc: 'Pike and perch in waters that few have ever fished. Every cast is a chance at something extraordinary \u2014 trophy fish in pristine wilderness.' },
           { title: 'The Team', desc: 'Meet Asgeir and Ola \u2014 local guides with deep knowledge of these northern waters. They know where the big fish are, and they\u2019ll take you there.' }
-        ]
+        ],
+        tilePage: {
+          title: 'From the Water',
+          subtitle: 'Every trip tells a story \u2014 here\u2019s a glimpse of ours',
+          seeMore: 'See More',
+          facebook: 'Follow us on Facebook',
+          whatsapp: 'Message us on WhatsApp'
+        }
       },
       sv: {
         htmlLang: 'sv',
@@ -1153,7 +1160,7 @@
         languageSelectorAria: 'Språkval',
         backToMainAria: 'Tillbaka till startsidan',
         location: 'Karasjok, Norge',
-        defaultTagline: 'Det finns alltid en större fisk',
+        defaultTagline: "It's Always A Bigger Fish",
         ctaCall: 'Ring oss',
         ctaEmail: 'Mejla oss',
         slides: {
@@ -1186,7 +1193,14 @@
           { title: 'Vattnen', desc: 'Avlägsna sjöar och fjordar i norra Norge och norra Sverige. Orörda vatten där rovfisken frodas i tystnad och väntar på rätt sportfiskare.' },
           { title: 'Fångsten', desc: 'Gädda och abborre i vatten där få har fiskat. Varje kast är en chans till något extraordinärt \u2014 troféfisk i orörd vildmark.' },
           { title: 'Teamet', desc: 'Möt Asgeir och Ola \u2014 lokala guider med djup kunskap om dessa nordliga vatten. De vet var storfisken finns, och de tar dig dit.' }
-        ]
+        ],
+        tilePage: {
+          title: 'Fr\u00e5n vattnet',
+          subtitle: 'Varje tur ber\u00e4ttar en historia \u2014 h\u00e4r \u00e4r en glimt av v\u00e5r',
+          seeMore: 'Se mer',
+          facebook: 'F\u00f6lj oss p\u00e5 Facebook',
+          whatsapp: 'Skriv till oss p\u00e5 WhatsApp'
+        }
       }
     };
     let currentLang = 'en';
@@ -1244,6 +1258,21 @@
       });
     }
 
+    function updateTilePageCopy(langData) {
+      if (!langData.tilePage) return;
+      var tp = langData.tilePage;
+      var t = document.getElementById('tile-title');
+      var s = document.getElementById('tile-subtitle');
+      var fb = document.getElementById('tile-fb-text');
+      var wa = document.getElementById('tile-wa-text');
+      var sm = document.getElementById('tile-see-more');
+      if (t) t.textContent = tp.title;
+      if (s) s.textContent = tp.subtitle;
+      if (fb) fb.textContent = tp.facebook;
+      if (wa) wa.textContent = tp.whatsapp;
+      if (sm) sm.textContent = tp.seeMore;
+    }
+
     function applyLanguage(lang) {
       if (isAnimating || !translations[lang] || lang === currentLang) return;
       currentLang = lang;
@@ -1264,6 +1293,7 @@
       updateSlideCopy(langData);
       updateActiveHeroCopy(langData);
       updateGalleryCopy(langData);
+      updateTilePageCopy(langData);
 
       langButtons.forEach(btn => {
         const selected = btn.dataset.lang === lang;
@@ -1273,7 +1303,7 @@
     }
 
     function buildArchedTitle() {
-      return '<svg class="arched-title-svg" viewBox="0 0 840 280" role="presentation" aria-hidden="true"><defs><path id="main-title-arc" d="M 18 245 Q 420 30 822 245"></path></defs><text class="arched-title-text"><textPath href="#main-title-arc" startOffset="50%" text-anchor="middle">LakesidePredatorfishing</textPath></text></svg>';
+      return '<svg class="arched-title-svg" viewBox="0 0 840 280" role="presentation" aria-hidden="true"><defs><path id="main-title-arc" d="M 18 245 Q 420 30 822 245"></path></defs><text class="arched-title-text"><textPath href="#main-title-arc" startOffset="50%" text-anchor="middle">Lakeside Predatorfishing</textPath></text></svg>';
     }
 
     function buildWords(text) {
